@@ -1,67 +1,0 @@
-# Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003 Free Software
-# Foundation, Inc.
-#
-# This file is part of DejaGnu.
-#
-# DejaGnu is free software; you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# DejaGnu is distributed in the hope that it will be useful, but
-# WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with DejaGnu; if not, write to the Free Software Foundation,
-# Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-
-# This is a list of toolchains that are supported on this board.
-set_board_info target_install {sh-hms}
-
-# Load the generic configuration for this board. This will define a basic
-# set of routines needed by the tool to communicate with the board.
-load_generic_config "sim"
-
-# basic-sim.exp is a basic description for the standard Cygnus simulator.
-load_base_board_description "basic-sim"
-
-# The name of the directory in the build tree that the simulator lives in
-# is "sh".
-setup_sim sh
-
-# No multilib flags needed by default.
-process_multilib_options ""
-
-# The compiler used to build for this board. This has *nothing* to do
-# with what compiler is tested if we're testing gcc.
-set_board_info compiler "[find_gcc]"
-
-# We only support newlib on this target.
-# However, we include libgloss so we can find the linker scripts.
-set_board_info cflags "[newlib_include_flags] [libgloss_include_flags]"
-set_board_info ldflags "[newlib_link_flags]"
-# No linker script for this board.
-set_board_info ldscript ""
-# The simulator doesn't return exit statuses and we need to indicate this.
-# Doesn't work on SH yet.
-# set_board_info needs_status_wrapper 1
-# Can't pass arguments to this target.
-set_board_info noargs 1
-# No signals.
-set_board_info gdb,nosignals 1
-# And it can't call functions.
-set_board_info gdb,cannot_call_functions 1
-
-# Used by a few gcc.c-torture testcases to delimit how large the stack can
-# be.
-set_board_info gcc,stack_size 16384
-
-# Need to pass -mieee in order to for the compiler to be IEEE-fp compliant.
-set_board_info ieee_multilib_flags "-mieee"
-
-#We want to pass "18" to GDB"s "targt sim" command.
-set_board_info gdb,target_sim_options "18"
-#and the standalone simulator
-set_board_info sim,options "-m 18"
